<resources>
    <string name="app_name">Bora</string>

    <string name="API_KEY_MAPS" templateMergeStrategy="preserve" translatable="false">
        <!--AIzaSyAVvGg1bheMsVeUhbCuHdqVgQ9YcI-NyvQ--></string>

    <string name="username">E-mail ou Apelido</string>
    <string name="login">Login</string>
    <string name="icone_logo">logo</string>
    <string name="senha">Senha</string>
    <string name="cadastra_se">cadastra-se</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="organizador">Organizador</string>
    <string name="detalhe_evento">Detalhe do Evento</string>
    <string name="participante">Participantes</string>
    <string name="register">Cadastra-se</string>
    <string name="forgot_password">Esqueci minha senha</string>
    <string name="my_account">Minha conta</string>
    <string name="add_role">BORA CRIAR UM ROLÊ?</string>
    <string name="my_role">MEUS ROLÊS</string>
    <string name="settings">Configurações</string>
    <string name="confirm_event">CONFIRMAR EVENTO</string>
    <string name="notification">Notificações</string>
    <string name="search">Pesquisar</string>
    <string name="my_profile">Meu Perfil</string>
    <string name="roles">ROLÊS</string>
    <string name="preferencias">Baseado em suas preferencias, temos:</string>
    <string name="encontreSeuRole">Encontre seu rolê...</string>
    <string name="naoEncontrou">Não encontrou?</string>
    <string name="rolesCriados">Meus rolês criados (1)</string>
    <string name="rolesParticipo">Rolês que participo (1)</string>
    <string name="phone_user_format">+55(DD) 9 9999–9999</string>
    <string name="CNPJ">Digite seu CNPJ</string>
    <string name="nome_da_empresa">Nome da empresa</string>
    <string name="digite_cpf">Digite seu cpf</string>
    <string name="nome_usuario">Nome de usuário</string>
    <string name="email_ou_login">E-mail ou login</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="upload_user_pic">Insira sua foto de perfil</string>
    <string name="pessoa_fisica">Pessoa Física</string>
    <string name="pessoa_juridica">Pessoa Juridica</string>
    <string name="click_cadastrar">Clique para cadastrar</string>
    <string name="identificador">Identificador</string>
    <string name="evento">Evento</string>
    <string name="local">Local</string>
    <string name="horario">Horario</string>
    <string name="confirmarParticipante">Confirmar Participante</string>
    <string name="altera_foto">Alterar foto</string>
    <string name="qualificacao_usuario">Qualificações</string>
    <string name="titulo_cpf">CPF</string>
    <string name="email">Email</string>
    <string name="alterar">Alterar</string>
    <string name="cadastre_preferencia">Cadastre suas preferências de evento</string>
    <string name="esporte_favorito">Esporte favorito</string>
    <string name="festa_favorita">Tipo de festa</string>
    <string name="social_favorito">Evento social favorito</string>
    <string name="tipo_acesso">Qual seu tipo de acesso?</string>
    <string name="confirmar_role">Podemos confirma-lo neste rolê?</string>
    <string name="bora_detalhar">Bora!</string>
    <string name="labelPreferencias">PREFERÊNCIAS</string>
    <string name="configEditarPerfil">Editar Perfil</string>
    <string name="editarSenha">Editar Senha</string>
    <string name="configPreferencias">Preferências</string>
    <string name="configNotificacoes">Notificações</string>
    <string name="save">Salvar</string>
    <string name="labelTipoEventos">Quais tipos de eventos que você mais gosta?</string>
    <string name="configuracoes">CONFIGURAÇÕES</string>
    <string name="eventosFutebol">FUTEBOL</string>
    <string name="eventosRpg">RPG</string>
    <string name="eventosFestas">FESTAS</string>
    <string name="eventosBares">BARES</string>
    <string name="eventosShows">SHOWS</string>
    <string name="eventosYoga">IOGA</string>
    <string name="logout">Sair</string>
    <string name="yes">SIM</string>
    <string name="no">NÃO</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cadastre_um_evento">Cadastre seu evento</string>
    <string name="insira_imagem">Insira uma imagem</string>
    <string name="tipo_evento">Tipo de evento</string>
    <string name="desciption_button_public">PUBLICO</string>
    <string name="desciption_button_private">PRIVADO</string>
    <string name="info_evento_nome">Insira o nome do evento</string>
    <string name="info_hint_evento1">nome do seu evento</string>
    <string name="info_event_zipcode">Cep</string>
    <string name="info_event_number_street">Nº da rua</string>
    <string name="info_hint_evento3">Numero</string>
    <string name="info_event_date_start">Data de inicio</string>
    <string name="info_event_schedule_start">Horario de inicio</string>
    <string name="info_evento_valor">Valor em R$</string>
    <string name="editar_um_evento">Editando evento...</string>
    <string name="resend_password">Recuperar senha</string>
    <string name="nova_senha">Nova Senha</string>
    <string name="confirm_new_password">Confirmar nova senha</string>
    <string name="salvar_senha">Salvar senha</string>
    <string name="add_event">Criar Evento</string>
    <string name="editar_evento">Editar Evento</string>
    <string name="celular">Celular</string>
    <string name="permission_denied">Sem permissão</string>
    <string name="dots">...</string>
    <string name="emailError">Por favor preencher o email</string>
    <string name="loginError">Por favor preencher o login</string>
    <string name="senhaError">Por favor preencher a senha</string>
    <string name="celularError">Por favor preencher o celular</string>
    <string name="nomeError">Por favor preencher o nome</string>
    <string name="nomeUsuario">Nome</string>
    <string name="loginSenhaError">Login ou senha está incorreto</string>
    <string name="endereco">Endereço</string>
    <string name="senhaEventoPrivado">Senha para eventos privados</string>
    <string name="hintSenhaEvento">Senha para evento privado</string>
    <string name="campoObrigatorio">Campo Obrigatório</string>
    <string name="bucarEndereco">Buscar Endereço</string>
    <string name="preencherCep">Por favor, preencher o cep antes de pesquisar</string>
    <string name="auth_no_content">Usuario não encontrado</string>
    <string name="auth_no_unauthorized">Não consegui te autorizar, é essa senha mesmo ?</string>
    <string name="logo_bora">logo bora</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_event">Titulo do evento</string>
    <string name="event_public">Evento Publico</string>
    <string name="event_private">Evento Privado</string>
    <string name="format_date">dd/mm/yyyy</string>
    <string name="format_schedule">hh:mm</string>
    <string name="info_event_date_end">Data de termino</string>
    <string name="event_free">Evento Gratuito</string>
    <string name="add_category">Adicionar Categoria</string>
    <string name="add_guest">Adicionar participante</string>
    <string name="welcome">Seja bem vindo</string>
    <string name="switch_theme">Tema Escuro</string>
    <string name="controls">Preferencias</string>
    <string name="title_activity_teste_loko">TesteLoko</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="enderecoNaoEncontra">Endereço não localizado. Tente novamente</string>
    <string name="dataInicio">Data Início</string>
    <string name="horaInicio">Horário Início</string>
    <string name="dataTermino">Data Termino</string>
    <string name="horaTermino">Horário Termino</string>
    <string name="preenchecep">Por favor preencher os 8 digitos do CEP</string>
    <string name="password_event">Senha do evento</string>
    <string name="my_wallet">Carteira</string>
    <string name="description_event">Deixe aqui uma breve descrição do seu evento</string>
    <string name="description_event_label">Descrição do evento</string>
    <string name="address_event">Endereço do evento</string>
    <string name="zip_code_not_found">Cep nao encontrado</string>
    <string name="date_start_event_not_before_current_date">A data do evento, tem que ser no futuro</string>
    <string name="date_end_event_not_before_date_start">Seu evento nao pode terminar antes da data de inicio</string>
    <string name="info_event_schedule_end">Horario do termino</string>
    <string name="schedule_end_not_before_schedule_start">Seu evento nao pode terminar antes do inicio</string>
    <string name="schedule_start_not_before_current_time">Seu evento tem que começar no futuro</string>
    <string name="date_created_event_description">Este evento foi criado em %1$s</string>
    <string name="balance_event_description">Seu saldo é de R$ %1$s</string>
</resources>
