<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/d_profile"
            android:checkable="false"
            android:icon="@drawable/ic_person_light"
            android:title="@string/my_profile" />

  <!--      <item
            android:id="@+id/d_wallet"
            android:checkable="false"
            android:icon="@drawable/ic_account_light"
            android:title="@string/my_wallet" />-->
    </group>

    <item android:title="@string/controls">
        <menu>
            <item
                android:id="@+id/d_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />

            <item
                android:id="@+id/d_logout"
                android:icon="@drawable/ic_logout_light"
                android:title="@string/logout" />

        </menu>

    </item>

</menu>